@@ -1,6 +1,11 @@
 # ChangeLog for virtual/xmwde
-# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*xmwde-0_p20120919-r1 (25 Mar 2013)
+
+  25 Mar 2013; Michael Weber <xmw@gentoo.org> +xmwde-0_p20120919-r1.ebuild:
+  gnash for flash
 
   19 Sep 2012; Michael Weber <xmw@gentoo.org> xmwde-0_p20120919.ebuild:
   fix conky use-depends.
